<resources>
    <string name="app_name">Sdu Life</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_clubs">University clubs</string>
    <string name="menu_found">Found</string>
    <string name="menu_announcement">Announcement</string>
    <string name="menu_news">News</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_development">Development</string>
    <string name="menu_about">About</string>
    <string name="menu_calendar">Calendar</string>

    <string name="sign_out">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>