<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_clubs"
            android:title="@string/menu_clubs" />
        <item
            android:id="@+id/nav_found"
            android:title="@string/menu_found" />
        <item
            android:id="@+id/nav_announcement"
            android:title="@string/menu_announcement" />
        <item
            android:id="@+id/nav_news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_notification"
            android:title="@string/menu_notification" />
        <item
            android:id="@+id/nav_development"
            android:title="@string/menu_development" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_calendar"
            android:title="@string/menu_calendar" />
    </group>
</menu>