<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_clubs">

    <fragment
        android:id="@+id/nav_clubs"
        android:name="kz.edu.sdulife.ui.clubs.ClubsFragment"
        android:label="@string/menu_clubs"
        tools:layout="@layout/fragment_clubs" />

    <fragment
        android:id="@+id/nav_found"
        android:name="kz.edu.sdulife.ui.found.FoundFragment"
        android:label="@string/menu_found"
        tools:layout="@layout/fragment_found" />

    <fragment
        android:id="@+id/nav_announcement"
        android:name="kz.edu.sdulife.ui.announcement.AnnouncementFragment"
        android:label="@string/menu_announcement"
        tools:layout="@layout/fragment_announcement" />
    <fragment
        android:id="@+id/nav_news"
        android:name="kz.edu.sdulife.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/nav_notification"
        android:name="kz.edu.sdulife.ui.notification.NotificationFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/nav_development"
        android:name="kz.edu.sdulife.ui.development.DevelopmentFragment"
        android:label="@string/menu_development"
        tools:layout="@layout/fragment_development" />
    <fragment
        android:id="@+id/nav_about"
        android:name="kz.edu.sdulife.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_calendar"
        android:name="kz.edu.sdulife.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

</navigation>